/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */

export interface Attachment {
  /** Unique identifier for the attachment. */
  id: string;
  /** Name of the attached file. */
  filename: string;
  /** URL where the attachment can be accessed. */
  url: string;
  /** Size of the attached file in bytes. */
  size: number;
}
