/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */

export interface Channel {
  /** Unique identifier for the channel */
  id: string;
  /** Name of the channel */
  name: string;
  /** Number of new messages in the channel */
  newMessagesCount: number;
}
