/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */
import type { User } from "./user";

export interface DirectChat {
  /** Unique identifier for the direct chat */
  id: string;
  /** The other participant in the direct chat */
  participant: User;
  /** Number of new messages in the direct chat */
  newMessagesCount: number;
}
