/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */
import type { Attachment } from "./attachment";
import type { Reaction } from "./reaction";
import type { User } from "./user";

export interface Message {
  /** Unique identifier for the message. */
  id: string;
  /** The content of the message. */
  content: string;
  /** The user who sent the message. */
  sender: User;
  /** The time when the message was sent. */
  timestamp: string;
  /** List of attachments included in the message. */
  attachments?: Attachment[];
  /** List of reactions to the message. */
  reactions?: Reaction[];
  /** Indicates whether the message has been edited. */
  isEdited?: boolean;
}
