/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */
import type { User } from "./user";

export interface Reaction {
  /** The unique identifier of the reaction. */
  id: string;
  /** The emoji used in the reaction. */
  emoji: string;
  /** The user who made the reaction. */
  user: User;
}
