/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */
import type { UserStatus } from "./userStatus";

export interface User {
  /** Unique identifier for the user */
  id: string;
  /** Name of the user */
  name: string;
  /** Surname of the user */
  surname: string;
  /** Email address of the user */
  email: string;
  /** URL of the user's avatar image */
  avatarUrl: string;
  status: UserStatus;
}
