/**
 * Generated by orval v8.16.0 🍺
 * Do not edit manually.
 * Szponcik communicator API
 * OpenAPI spec version: 1.0.0
 */
import type { Channel } from "./channel";
import type { User } from "./user";
import type { WorkspaceUserRole } from "./workspaceUserRole";

export interface Workspace {
  id: string;
  name: string;
  logoUrl: string;
  /** The role of the authenticated user within the workspace */
  userRole: WorkspaceUserRole;
  /** List of channels within the workspace */
  channels: Channel[];
  /** List of users who are members of the workspace */
  users: User[];
}
